Adicionando uma imagem a página de times e fazendo o README

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <img src="./assets/image/imagem.png" alt="Imagem do logotipo serie A">
         <h1>Times Brasileiros da Série A</h1>
     </header>
     <main>
