Atualizando os contatos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </main>
     <footer>
         <p>2024 - Times Brasileiros da Série A. Todos os direitos reservados</p>
-        <p>Entre em contato com o email: contato@timesbrasil.com</p>
+        <p>Entre em contato com o email: flavioleandro@timesbrasil.com</p>
     </footer>
     <script src="./teams.js"></script>
     <script src="./app.js"></script>
